minor spacing issue, search container occurs in multiple places

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1081,7 +1081,7 @@ h2,h3,h4,h5,h6 a {
   font-size: 10px;
 }
 
-.highlight { position:relative;margin-top: 50px;}
+.highlight { position:relative;}
 
 .highlight .copy-link-old {
   margin-left: 10px;
